fix: validate running khcheck pod logs
